--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -3,7 +3,6 @@
   border-radius: 8px;
   background: var(--gray-500);
   display: flex;
-  justify-content: space-between;
   margin-bottom: 1rem;
 }
 
@@ -15,6 +14,7 @@
   padding: 1rem;
   cursor: pointer;
   padding-right: 2rem;
+  flex: 1;
 }
 .circle,
 .checkedCircle {
